--- a/travel.html
+++ b/travel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
+    <title>Travel</title>
 </head>
 <body>
     <a href = "#main">Skip to Main Content</a>
@@ -20,7 +20,7 @@
 
     </header>
     <main id="main">
-        <h1>Pets</h1>
+        <h1>Travel</h1>
         <div>
             <h2>Bacon Q Dog</h2>
             <img src="images/bacon.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
