--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </header>
     <main id="main">
         <div>
-            <p>Welcome to [insert website name], your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
+            <p>Welcome to Andrew's Website, your go-to destination for all things pets, recipes, and travel! Explore a world of captivating content where we cater to your love for furry companions, culinary delights, and globetrotting adventures. </p>
 
         </div>
 
-<div>[Enter more of your own content here]</div>
+<div>[my own content here]</div>
             
             <!-- Jackie Wolf -->
     
