--- a/recipe.html
+++ b/recipe.html
@@ -26,7 +26,7 @@
             <h3>Origin: China</h3>
             <h3>Source: tofu, mushrooms, and bamboo shoots</h3>
             <h3>Category: Soup</h3>
-            <img src="images/ChineseHotandSourSoup1.jpeg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/ChineseHotandSourSoup1.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
 
             <p>Chinese Hot and Sour Soup (酸辣汤) is a popular and flavorful soup known for its spicy and tangy taste. It's made with a variety of ingredients including tofu, mushrooms, and bamboo shoots.</p>
             <h3>Recipe Ingredients</h3>
@@ -46,9 +46,9 @@
                 <li>Dipping Sauces</li>
             </ol>
             <h3>Additional Food images</h3>
-            <img src="images/ChineseHotandSourSoup2.jpeg" width ="200" alt = "Brown labradoodle wearing an orange bandana">
-            <img src="images/ChineseHotandSourSoup3.jpeg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <img src="images/ChineseHotandSourSoup4.jpeg"  width ="200" alt="Brown labradoodle wearing a pirate costume">
+            <img src="images/ChineseHotandSourSoup2.jpg" width ="200" alt = "Brown labradoodle wearing an orange bandana">
+            <img src="images/ChineseHotandSourSoup3.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
+            <img src="images/ChineseHotandSourSoup4.jpg"  width ="200" alt="Brown labradoodle wearing a pirate costume">
 
             <!-- Guanhua Xue -->
         
