--- a/recipe.html
+++ b/recipe.html
@@ -26,7 +26,7 @@
             <h3>Origin: China</h3>
             <h3>Source: tofu, mushrooms, and bamboo shoots</h3>
             <h3>Category: Soup</h3>
-            <img src="images/ChineseHotandSourSoup1.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/ChineseHotandSourSoup1.jpg" width = "400" alt="Chinese hot and sour soup">
 
             <p>Chinese Hot and Sour Soup (酸辣汤) is a popular and flavorful soup known for its spicy and tangy taste. It's made with a variety of ingredients including tofu, mushrooms, and bamboo shoots.</p>
             <h3>Recipe Ingredients</h3>
@@ -46,9 +46,9 @@
                 <li>Dipping Sauces</li>
             </ol>
             <h3>Additional Food images</h3>
-            <img src="images/ChineseHotandSourSoup2.jpg" width ="200" alt = "Brown labradoodle wearing an orange bandana">
-            <img src="images/ChineseHotandSourSoup3.jpg"  width ="200" alt="Small labradoodle puppy wearing a graduation cap and gown">
-            <img src="images/ChineseHotandSourSoup4.jpg"  width ="200" alt="Brown labradoodle wearing a pirate costume">
+            <img src="images/ChineseHotandSourSoup2.jpg" width ="200" alt = "A picture of Chinese hot and sour soup">
+            <img src="images/ChineseHotandSourSoup3.jpg"  width ="200" alt="Another picture of Chinese hot and sour soup">
+            <img src="images/ChineseHotandSourSoup4.jpg"  width ="200" alt="Yet another picture of Chinese hot and sour soup">
 
             <!-- Guanhua Xue -->
         
@@ -58,7 +58,7 @@
             <h3>Origin: China</h3>
             <h3>Source: flour, pork and cabbage</h3>
             <h3>Category: Main Dish</h3>
-            <img src="images/jiaozi.jpeg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/jiaozi.jpeg" width = "400" alt="Jiaozi picture">
 
             <p>Chinese dumplings (Jiaozi, 饺子) are stuffed parcels made of unleavened dough and savory fillings consisting of minced ingredients like meat, egg, tofu, or vegetables. They can be boiled, pan-fried or steamed.</p>
             <h3>Recipe Ingredients</h3>
@@ -89,7 +89,7 @@
             <h3>Origin: Northern Europe</h3>
             <h3>Source: Own Recipe</h3>
             <h3>Category: Main Dish</h3>
-            <img src="images/mac&cheese.jpg" width = "400" alt="Brown labradoodle wearing colorful lei">
+            <img src="images/mac&cheese.jpg" width = "400" alt="Mac and Cheese">
 
             <p>Macaroni and cheese, commonly known as mac & cheese, is a comfort food staple that has captured the hearts of people all over the world. Originating from Europe and popularized in the United States, this dish consists of elbow macaroni pasta smothered in a creamy cheese sauce. The simplicity of its ingredients—pasta, cheese, and often a touch of butter or milk—belies a rich, complex flavor that has made it a favorite for both quick weeknight dinners and festive holiday gatherings.</p>
             <h3>Recipe Ingredients</h3>
